@@ -1,0 +1,1 @@
+Remove obsolete field Name from debian/upstream/metadata (already present in machine-readable debian/copyright).
